[gd_scene load_steps=2 format=3 uid="uid://blg1c3v4o44of"]

[ext_resource type="Script" uid="uid://blhv0kms1sleu" path="res://Scripts/FlowControl.gd" id="1_6sy3t"]

[node name="FlowControl" type="Control"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
script = ExtResource("1_6sy3t")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_bottom = -4.0
text = "Movement"
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="InStepper" type="SpinBox" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.75
anchor_bottom = 1.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
max_value = 10000.0
step = 0.1
value = 1.0
prefix = "In:"

[node name="OutStepper" type="SpinBox" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
max_value = 10000.0
step = 0.1
value = 1.0
prefix = "Out:"

[connection signal="value_changed" from="Panel/InStepper" to="." method="_on_in_stepper_value_changed"]
[connection signal="value_changed" from="Panel/OutStepper" to="." method="_on_out_stepper_value_changed"]
